Color & logo changes

--- a/sass/_acc-list.scss
+++ b/sass/_acc-list.scss
@@ -8,12 +8,8 @@
 
 .acc-list-category { // Category Header
 	display:block;
-	/* @include background-image(linear-gradient($green, darken($green, 10%))); */ /* FLATTEN */
-   @include border-radius(2px); /* FLATTEN */
-	@include box-shadow(rgba(white, 0.25) 0px 1px 1px 0px inset);
-	@include text-shadow(black -1px -1px 3px, rgba(#000061, 0.5) 0px 1px 1px);
-	background-color:$green;
-	/* border-left:solid 1px $grey-80; */ /* FLATTEN */
+   @include border-radius(2px);
+	background-color:$blue;
 	color:$white;
 	cursor:pointer;
 	margin:0.25em 0;
@@ -23,8 +19,7 @@
 	text-overflow: ellipsis;
 	white-space:nowrap;
 	&:hover {
-		/* @include background-image(linear-gradient(darken($green, 2%), darken($green, 12%))); */ /* FLATTEN */
-      background-color: $darkgreen; /* FLATTEN */
+      background-color: $orange;
 		color:$white;
 	}
 	&:after {
@@ -38,7 +33,7 @@
 		content:'\2013' !important; /*minus sign*/
 	}
 .acc-sublist{ // subordindate ul
-	border-left:solid 1px $green;
+	border-left:solid 1px $blue;
 	list-style:none;
 	margin:0;
 	padding:0;
@@ -57,10 +52,10 @@
 		}
 	}
 	li:nth-of-type(even) {
-		background:rgba($green, 0.2);
+		background:rgba($blue, 0.2);
 	}
 	li:hover{
-		background:rgba($green, 0.4)
+		background:rgba($blue, 0.4)
 	}
 	a {
 		color:$black;
