--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -4,11 +4,8 @@
 	}
 	.submit {
 		display:block;
-		@include background-image(linear-gradient($green, darken($green, 10%)));
-		@include border-radius(2px); /* FLATTEN */
-		@include box-shadow(rgba(white, 0.25) 0px 1px 1px 0px inset);
-		@include text-shadow(black -1px -1px 3px, rgba(#000061, 0.5) 0px 1px 1px);
-		background-color:$green;
+		@include border-radius(2px);
+		background-color:$blue;
 		border:solid 1px $grey-80;
 		color:$white;
 		margin:1em 0;
@@ -16,7 +13,8 @@
 		text-align:center;
 		text-decoration:none;
 		&:hover {
-			@include background-image(linear-gradient(darken($green, 2%), darken($green, 12%)));
+         @include transition();
+         background-color:$orange;
 			cursor:pointer;
 		}
 	}
