--- a/sass/_libthing.scss
+++ b/sass/_libthing.scss
@@ -56,6 +56,6 @@
 .lt-cover img {
 	@include box-shadow(2px 2px 5px 0px rgba(0, 0, 0, 0.5));
 	/* @include border-radius(2px);*/  /* FLATTEN */
-	border:solid 1px #666633;
+	border:solid 1px $black;
 	width:100% !important;
 }
