--- a/sass/_widgets.scss
+++ b/sass/_widgets.scss
@@ -21,7 +21,6 @@
 		&:hover {text-decoration:underline;}
 			}
 	padding:0.5em 0;
-	/* @include box-shadow(darken($dark-grey, 5%) 0 -1px 0 0 inset); */ /* FLATTEN */
 	border-bottom:1px solid lighten($dark-grey, 5%);
 	&:first-child{
 		padding-top:0;
@@ -81,10 +80,8 @@
 .live-chat {
 	position:relative;
  	overflow:auto;
- 	@include border-radius(2px);  /* FLATTEN */
- 	/* @include box-shadow(rgba(white, 0.25) 0px 1px 1px 0px inset);*/ /* FLATTEN */
-	/* @include text-shadow(black -1px -1px 3px, rgba(#000061, 0.5) 0px 1px 1px); */ /* FLATTEN */
-	background-color:$green;
+ 	@include border-radius(2px);
+	background-color:$blue;
 	border:solid 1px $grey-80;
 	color:$white;
 	margin:0.25em 0;
@@ -93,21 +90,18 @@
   	cursor:pointer;
 }
 .on {
-  /* @include background-image(linear-gradient($green, darken($green, 10%))); */ /* FLATTEN */
-  background-color: $green; /* FLATTEN */
+  background-color: $blue; 
   &:hover {
-		/* @include background-image(linear-gradient(darken($green, 2%), darken($green, 12%))); */ /* FLATTEN */
-      background-color: $darkgreen; /* FLATTEN */
+      @include transition();
+      background-color: $orange;
 		color:$white;
 	}
 }
 
 .off {
-  /* @include background-image(linear-gradient($red, darken($red, 10%))); */ /* FLATTEN */
-  background-color: $red; /* FLATTEN */
+  background-color: $red;
   &:hover {
-		/* @include background-image(linear-gradient(darken($red, 2%), darken($red, 12%))); */ /* FLATTEN */
-      background-color: $darkred; /* FLATTEN */
+      background-color: $darkred;
 		color:$white;
 	}
 }
