--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -37,8 +37,11 @@ $experimental-support-for-svg: true;
 }
 
 /*Font Families*/
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
+
 $font-default-color			: black;
-$font-default-family			: "Helvetica", "Arial", sans-serif;
+/*$font-default-family			: "Helvetica", "Arial", sans-serif;*/
+$font-default-family        : "Open Sans", sans-serif;
 $font-default-lineheight	: 1.5;
 $font-default-size			: 1.6em;
 $font-default-weight			: regular;
