--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -6,18 +6,19 @@ html {
 	position:relative;
 	top:50px;
 	@media all and (min-width:800px) {
-		padding-top: 2em;
+		/*padding-top: 2em;*/
 		top:0;
 	}
 }
-body { //The whole page, placed on the body tag
+body { 
 	background-image: $site-background-image;
-	background-position:center;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
+   background-color: $darkdark;
+	/*background-position:center;
+	background-size: cover;*/
+	background-repeat: repeat-x;
+	/*background-attachment: fixed;*/
 	min-width:320px;
-	max-width:1024px;
+	max-width:1100px;
 	position:relative;
 	@media all and (min-width:800px) {
 		min-width:960px;
@@ -33,8 +34,8 @@ body { //The whole page, placed on the body tag
 	}
 	@media all and (min-width:800px){
 		height:16em;
-		@include border-top-radius(2px);
-		border: $default-border;
+		/*@include border-top-radius(2px);
+		border: $default-border;*/
 	}
 }
 .milligan-logo {
@@ -94,16 +95,16 @@ body { //The whole page, placed on the body tag
 			&:last-of-type{border-right:none !important;}}
 	}
 }
-#page { //The "page" as in, the content
+#page { 
 	background-color:$milgray;
 	position:relative;
 	margin:0;
 	width:100%;
 	overflow:hidden;
 	@media all and (min-width:800px){
-		@include border-radius(2px);
+		/*@include border-radius(2px);*/
 		margin:0 2%;
-		max-width:1024px;
+		max-width:1100px;
 		overflow:visible;
 		width:96%;
 
@@ -115,15 +116,17 @@ body { //The whole page, placed on the body tag
 	width: 100%;
 	min-height: 55em;
 	@media all and (min-width:800px){
-		border:$default-border;
+      min-height:60em;
+      padding: 1% 0 0 2.5%;
+		/*border:$default-border;
 		border-top:none;
-		border-bottom:none;
+		border-bottom:none;*/
 	}
 }
 #content {
 	margin: 0 1em 0 0;
 	@media all and (min-width:800px){
-		margin:0 25em 0 0;
+		margin:0 32em 0 0;
 	}
 }
 .widget-area { /* Sidebar 1 */
@@ -136,9 +139,10 @@ body { //The whole page, placed on the body tag
 	@include border-radius();
 	z-index:99;
 	@media all and (min-width:800px){
+      background:$milgray;
 		@include border-left-radius();
-		right:-0.5%;
-		top:15em;
+		right:5%;
+		top:15.75em;
 	}
 }
 .side-expand {
@@ -185,11 +189,12 @@ body { //The whole page, placed on the body tag
 	width: 100%;
 	text-align:center;
 	height:7em;
-	border-top:$default-border;
-	border-bottom:$default-border;
+	/*border-top:$default-border;
+	border-bottom:$default-border;*/
 	@media all and (min-width:800px){
-		border:$default-border;
-		@include border-bottom-radius(2px);
+      background:$milgray;
+		/*border:$default-border;
+		@include border-bottom-radius(2px);*/
 	}
 }
 
