--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -22,7 +22,7 @@
   font-size     :   $font-menu-size;
   font-weight   :   $font-menu-weight;
 	line-height 	: 	$font-menu-lineheight;
-	@include text-shadow();
+	/*@include text-shadow();*/
 }
 
 .widget-text {
@@ -33,9 +33,10 @@
   line-height   :   $font-widget-lineheight;
   padding: 0.5em 0.5em 0.5em 1.5em;
   @media all and (min-width:800px){
-    padding: 0.5em;
+     color:#000;
+     padding: 0.5em;
   }
-  @include text-shadow();
+  /*@include text-shadow();*/
 }
 
 .alert {
