--- a/sass/_widgets.scss
+++ b/sass/_widgets.scss
@@ -56,8 +56,8 @@
 	.tweet-foot {font-size:0.9em;}
 	.tweet {
 		padding:0.5em 0 0 0;
-		border-top: 1px solid lighten($dark-grey, 5%);
-		border-bottom:1px solid darken($dark-grey, 5%);
+		/*border-top: 1px solid lighten($dark-grey, 5%);
+		border-bottom:1px solid darken($dark-grey, 5%);*/
 		&:last-of-type{
 			border-bottom:none;
 		}
