--- a/sass/_comments.scss
+++ b/sass/_comments.scss
@@ -1,5 +1,7 @@
-/* =Comments
------------------------------------------------ */
+/* -----------------------------------------------------------------------------
+ *                                  Comments
+ * ---------------------------------------------------------------------------*/
 
-.bypostauthor {
+
+ .bypostauthor {
 }
