--- a/sass/_logged-in.scss
+++ b/sass/_logged-in.scss
@@ -1,10 +1,13 @@
-/** Styles sepcific to being logged-in **/
+/* -----------------------------------------------------------------------------
+ *                          Specific to being logged-in
+ * ---------------------------------------------------------------------------*/
 
-
+ 
 .logged-in {
 	#mobile-menu-wrapper {
 		top:0px;
 	}
+
 	.secondary-menu-select {
 		top:12px;
 	}
