--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
-/*!
-Theme Name: Welshimer 2013 Refit 2014 Edition
-Theme URI: http://github.com/dbaker3/welshimer2013_r14
-Author: David Baker (Original project: Jack Weinbender)
+/*
+Theme Name: Welshimer 2015
+Theme URI: http://github.com/dbaker3/welshimer2015
+Author: David Baker
 Author URI: http://github.com/dbaker3/
 Description: P.H. Welshimer Memorial Library
 Version: 1.0
@@ -9,6 +9,9 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: MilliganCollege
 Text Domain: Welshimer
+
+Forked from Welshimer2013_r by Jack Weinbender: 
+(https://github.com/mclibrary/welshimer2013_r)
 
 This theme, like WordPress, is licensed under the GPL.
 Built on _s by Automattic
