--- a/sass/_acc-list.scss
+++ b/sass/_acc-list.scss
@@ -1,12 +1,15 @@
-/** Accordion List Styles **/
+/* -----------------------------------------------------------------------------
+ *                         Accordion Style Lists
+ * -------------------------------------------------------------------------- */
 
-.acc-list { //Main ul
+ 
+.acc-list { 
 	margin:0.5em 0;
 	padding:0;
 	list-style:none;
 }
 
-.acc-list-category { // Category Header
+.acc-list-category { 
 	display:block;
    @include border-radius(2px);
 	background-color:$blue;
@@ -25,14 +28,17 @@
 	&:after {
 		content:'\002b'; /*plus sign*/
 		position:absolute;
-			right:0.5em;
+		right:0.5em;
 		font-family:icon-font;
 	}
 }
+
 .open-item > a:after {
 		content:'\2013' !important; /*minus sign*/
-	}
-.acc-sublist{ // subordindate ul
+}
+
+
+.acc-sublist { 
 	border-left:solid 1px $blue;
 	list-style:none;
 	margin:0;
@@ -61,14 +67,17 @@
 		color:$black;
 		text-decoration:none;
 	}
-}
+} /* .acc-sublist */
+
 
 .mc:before {
 	@include main-sprite(mc);
 }
+
 .mctop_re:before {
 	@include main-sprite(mctop_re);
 }
+
 .top_re:before {
 	@include main-sprite(top_re);
 }
@@ -82,9 +91,11 @@
 .key-mc {
 	@include main-sprite(mc);
 }
+
 .key-topre {
 	@include main-sprite(smallstar);
 }
+
 .hidden {
 	display:none !important;
 }
