--- a/sass/_asides.scss
+++ b/sass/_asides.scss
@@ -1,6 +1,8 @@
-/* =Asides
------------------------------------------------ */
+/* -----------------------------------------------------------------------------
+ *                                  Asides
+ * ---------------------------------------------------------------------------*/
 
+ 
 .blog .format-aside .entry-title,
 .archive .format-aside .entry-title {
 	display: none;
