--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -1,25 +1,33 @@
-/* =Content
------------------------------------------------ */
+/* -----------------------------------------------------------------------------
+ *                                   Content
+ * ---------------------------------------------------------------------------*/
 
-.sticky {
+ 
+ .sticky {
 }
+
 .hentry {
 	margin: 0 0 1.5em;
 }
+
 .entry-meta {
 	clear: both;
 }
+
 .byline {
 	display: none;
 }
+
 .single .byline,
 .group-blog .byline {
 	display: inline;
 }
+
 .entry-content,
 .entry-summary {
 	margin: 0.5em 0 0;
 }
+
 .page-links {
 	clear: both;
 	margin: 0 0 1.5em;
