--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -1,16 +1,22 @@
-/* =Global
------------------------------------------------ */
+/* -----------------------------------------------------------------------------
+ *                                  Global
+ * ---------------------------------------------------------------------------*/
+
 
 body{}
 
+
 /* Headings */
+
 h1,h2,h3,h4,h5,h6 {
 	clear: both;
 }
+
 h1 {
 	font-size:1.25em;
 	font-weight:bold;
 }
+
 h2 {
 	font-size:1.25em;
 }
@@ -33,6 +39,7 @@ h4 {
 	white-space:nowrap;
 	}
 }
+
 hr {
 	background-color: #ccc;
 	border: 0;
@@ -40,44 +47,57 @@ hr {
 	margin-bottom: 1.5em;
 }
 
+
 /* Text elements */
+
 p {
 	margin-bottom: 1.5em;
 	&:last-of-type {
 		margin-bottom: 0;
 	}
 }
+
 ul, ol {
 	margin: 0 0 1.5em 3em;
 }
+
 ul {
 	list-style: disc;
 }
+
 ol {
 	list-style: decimal;
 }
+
 ul ul, ol ol, ul ol, ol ul {
 	margin-bottom: 0;
 	margin-left: 1.5em;
 }
+
 dt {
 	font-weight: bold;
 }
+
 dd {
 	margin: 0 1.5em 1.5em;
 }
+
 b, strong {
 	font-weight: bold;
 }
+
 dfn, cite, em, i {
 	font-style: italic;
 }
+
 blockquote {
 	margin: 0 1.5em;
 }
+
 address {
 	margin: 0 0 1.5em;
 }
+
 pre {
 	background: #eee;
 	font-family: "Courier 10 Pitch", Courier, monospace;
@@ -89,17 +109,21 @@ pre {
 	overflow: auto;
 	max-width: 100%;
 }
+
 code, kbd, tt, var {
 	font: 15px Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 }
+
 abbr, acronym {
 	border-bottom: 1px dotted #666;
 	cursor: help;
 }
+
 mark, ins {
 	background: #fff9c0;
 	text-decoration: none;
 }
+
 sup,
 sub {
 	font-size: 75%;
@@ -108,63 +132,81 @@ sub {
 	position: relative;
 	vertical-align: baseline;
 }
+
 sup {
 	bottom: 1ex;
 }
+
 sub {
 	top: .5ex;
 }
+
 small {
 	font-size: 75%;
 }
+
 big {
 	font-size: 125%;
 }
+
 figure {
 	margin: 0;
 }
+
 table {
 	margin: 0 0 1.5em;
 	width: 100%;
 }
+
 th {
 	font-weight: bold;
 }
 
+
 /* Links */
+
 a {
 	color: $black;
 }
+
 a:visited {
 	color: lighten($black, 5%);
 }
+
 a:hover,
 a:focus,
 a:active {
 	color: $black;
 }
 
+
 /* Alignment */
+
 .alignleft {
 	display: inline;
 	float: left;
 	margin-right: 1.5em;
 }
+
 .alignright {
 	display: inline;
 	float: right;
 	margin-left: 1.5em;
 }
+
 .aligncenter {
 	clear: both;
 	display: block;
 	margin: 0 auto;
 }
 
+
 /* Text meant only for screen readers */
+
 .assistive-text {
 	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
 	clip: rect(1px, 1px, 1px, 1px);
 	position: absolute !important;
 }
+
 .sticky{}
