--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,236 +1,256 @@
-/* Layout */
+/* -----------------------------------------------------------------------------
+ *                                  Layout
+ * ---------------------------------------------------------------------------*/
+
+
 * {
-	@include box-sizing('border-box');
+   @include box-sizing('border-box');
 }
+
 html {
-	position:relative;
-	top:50px;
-	@media all and (min-width:800px) {
-		/*padding-top: 2em;*/
-		top:0;
-	}
+   position:relative;
+   top:50px;
+   @media all and (min-width:800px) {
+      top:0;
+   }
 }
+
 body { 
-	background-image: $site-background-image;
+   background-image: $site-background-image;
    background-color: $darkdark;
-	/*background-position:center;
-	background-size: cover;*/
-	background-repeat: repeat-x;
-	/*background-attachment: fixed;*/
-	min-width:320px;
-	max-width:1100px;
-	position:static;
-	@media all and (min-width:800px) {
-		min-width:960px;
-		margin:0 auto;
-	}
+   background-repeat: repeat-x;
+   min-width:320px;
+   max-width:1100px;
+   position:static;
+   @media all and (min-width:800px) {
+      min-width:960px;
+      margin:0 auto;
+   }
 }
-.site-header{
-	background-color:$blue;
-	height:8.5em;
-	border-bottom:solid 2px $black;
-	@media all and (min-width:600px){
-		height:11em;
-	}
-	@media all and (min-width:800px){
-		height:16em;
-		/*@include border-top-radius(2px);
-		border: $default-border;*/
-	}
+
+.site-header {
+   background-color:$blue;
+   height:8.5em;
+   border-bottom:solid 2px $black;
+   @media all and (min-width:600px) {
+      height:11em;
+   }
+   @media all and (min-width:800px) {
+      height:16em;
+   }
 }
+
 .milligan-logo {
-	width:30em;
-	margin:1.5em 0 0 0.5em;
-	float:left;
-	img {width:100%; height:auto;}
-	@media all and (min-width:600px){
-		width:46em;
-		margin:1em 0 0 1em;
-	}
-	@media all and (min-width:800px){
-      margin-top:-2.6em;
-		width:60em;
-	}
+   font:normal normal normal 5.5em 'icon-font';
+   color:$white;
+   opacity:1;
+   margin:0.1em 0 0 0.05em;
+   float:left;
+   img {width:100%; height:auto;}
+   @media all and (min-width:600px) {
+      font-size:10em;
+      margin:0.05em 0 0 0.02em;
+      opacity:0.25;
+   }
+   @media all and (min-width:800px) {
+      font-size:12em;
+      margin:-0.25em 0 0 0;
+      opacity:0.25;
+   }
 }
+
 .welshimer-logo {
+   position:relative;
    font-family: "open sans", sans-serif;
    font-style:normal;
-   text-shadow: 1px 1px 20px #535353;
    font-size:1.5em;
    color:$white;
-	margin:-1.3em 0 0 3.2em;
-	float:left;
-	@media all and (min-width:600px){
+   margin:0 0 0 0.2em;
+   float:left;
+   text-shadow:none;
+   @media all and (min-width:600px) {
       font-size:3em;
-		margin:-1.3em 0 0 2.5em;
-	}
-	@media all and (min-width:800px){
+      margin:-1.55em 0 0 2.5em;
+      text-shadow: 1px 1px 20px #535353;
+   }
+   @media all and (min-width:800px) {
       font-size:4em;
-		margin:-1.2em 0 0 2.3em;
-	}
+      margin:-1.55em 0 0 2.3em;
+      text-shadow: 1px 1px 20px #535353;
+   }
 }
-.social-menu {
-	float:left;
-	width:100%;
-	font-family:'icon-font';
-	z-index:999999;
-	ul {overflow:auto;}
-	li {
-		text-align:center;
-		width:33.3333%;
-		margin:0;
-		font-size:1.5em;
-		list-style:none;
-		float:left;
-	}
-	@media all and (min-width:800px){
-		width:10em;
-		position:absolute;
-			top:0;
-			right:0;;
-		ul {background-color: transparent !important;}
-		a {padding:0.075em 0.5em !important;
-			&:last-of-type{border-right:none !important;}}
-	}
-}
-#page { 
-	background-color:$milgray;
-	position:relative;
-	margin:0;
-	width:100%;
-	overflow:hidden;
-	@media all and (min-width:800px){
-		/*@include border-radius(2px);*/
-		margin:0 2%;
-		max-width:1100px;
-		overflow:visible;
-		width:96%;
 
-	}
+.social-menu {
+   float:left;
+   width:100%;
+   font-family:'icon-font';
+   z-index:999999;
+   ul {overflow:auto;}
+   li {
+      text-align:center;
+      width:33.3333%;
+      margin:0;
+      font-size:1.5em;
+      list-style:none;
+      float:left;
+   }
+   @media all and (min-width:800px) {
+      width:10em;
+      position:absolute;
+         top:0;
+         right:0;;
+      ul {background-color: transparent !important;}
+      a {
+         padding:0.075em 0.5em !important;
+         &:last-of-type {
+            border-right:none !important;
+         }
+      }
+   }
 }
+
+#page { 
+   background-color:$milgray;
+   position:relative;
+   margin:0;
+   width:100%;
+   overflow:hidden;
+   @media all and (min-width:800px) {
+      margin:0 2%;
+      max-width:1100px;
+      overflow:visible;
+      width:96%;
+   }
+}
+
 .site-content {
-	float: left;
-	margin: 0 -22em 0 0;
-	width: 100%;
-	min-height: 55em;
-	@media all and (min-width:800px){
+   float: left;
+   margin: 0 -22em 0 0;
+   width: 100%;
+   @media all and (min-width:800px) {
       min-height:60em;
       padding: 1% 0 0 2.5%;
-		/*border:$default-border;
-		border-top:none;
-		border-bottom:none;*/
-	}
+      min-height: 55em;
+   }
 }
+
 #content {
-	margin: 0 1em 0 0;
-	@media all and (min-width:800px){
-		margin:0 32em 0 0;
-	}
+   margin: 0 1em 0 0;
+   @media all and (min-width:800px) {
+      margin:0 32em 0 0;
+   }
 }
+
 .widget-area { /* Sidebar 1 */
-	background:$dark-grey;
-	overflow: visible;
-	width: 22em;
-	position:absolute;
-		top:10em;
-		right:-21em;
-	@include border-radius();
-	z-index:99;
-	@media all and (min-width:800px){
+   background:$dark-grey;
+   overflow: visible;
+   width: 22em;
+   position:absolute;
+   top:10em;
+   right:-21em;
+   @include border-radius();
+   z-index:99;
+   @media all and (min-width:800px) {
       background:$milgray;
-		@include border-left-radius();
-		right:5%;
-		top:15.75em;
-	}
+      @include border-left-radius();
+      right:5%;
+      top:15.75em;
+   }
 }
+
 .side-expand {
-	display:block; visibility:visible;
-	position:absolute;
-		top:5%;
-		left:0;
-	width:1em;
-	height:90%;
-	background-color:$dark-grey;
-	border-right:solid 1px darken($dark-grey, 5%);
-	z-index:0;
-	&:after {
-		font-family:icon-font;
-		font-size:1em;
-		color:$light-grey;
-		content: "\e00e";
-		position:absolute;
-			top:49%;
-			left:2px;
-		vertical-align:center;
-		cursor:pointer;
-	}
-	&:hover:after {color:white;}
-	@media all and (min-width:800px) {
-		visibility:hidden;
-	}
+   display:block; visibility:visible;
+   position:absolute;
+   top:5%;
+   left:0;
+   width:1em;
+   height:90%;
+   background-color:$dark-grey;
+   border-right:solid 1px darken($dark-grey, 5%);
+   z-index:0;
+   &:after {
+      font-family:icon-font;
+      font-size:1em;
+      color:$light-grey;
+      content: "\e00e";
+      position:absolute;
+      top:49%;
+      left:2px;
+      vertical-align:center;
+      cursor:pointer;
+   }
+   &:hover:after {color:white;}
+   @media all and (min-width:800px) {
+      visibility:hidden;
+   }
 }
+
 .side-expand-open {
-	right:0;
+   right:0;
 }
+
 .side-expand-open .side-expand:after {
-		content:"\e00f";
+      content:"\e00f";
 }
+
 #tertiary { /* Sidebar 2 */
-	clear: right;
+   clear: right;
 }
+
 #colophon {
-	clear:both;
+   clear:both;
 }
+
 .site-footer {
    background:$milgray;
    color:$darkdark !important;
-	clear:both;
-	width: 100%;
-	text-align:center;
-	height:7em;
-	/*border-top:$default-border;
-	border-bottom:$default-border;*/
-/*	@media all and (min-width:800px){
-      background:$milgray; */
-		/*border:$default-border;
-		@include border-bottom-radius(2px);*/
-	/*}*/
+   clear:both;
+   width: 100%;
+   text-align:center;
+   height:8em;
 }
 
 .footer-logo {
-	display:block;
-	width:100%;
-	text-align:center;
-	img {
-		width:18em;
-	} 
+   font-family:'icon-font';
+   font-size:3.5em;
+   display:block;
+   opacity:0.7;
+   width:100%;
+   text-align:center;
+   img {
+      width:18em;
+   } 
 }
 
 .site-info {
-	display:block;
-	width:100%
+   display:block;
+   width:100%
 }
+
 .foot-noscript {
-	font-family: $font-default-family;
-	text-align:center;
-	background:rgba(red, 0.9);
-	color:$white;
-	font-size:1.5em;
-	height:4em;
-	padding:1em 0;
-	margin:0;
-	position:fixed;
-		bottom:0;
-		left:0;
-	width:100%;
-	z-index:999999999;
-	a {color:$white; font-weight:bold;text-decoration:underline;}
+   font-family: $font-default-family;
+   text-align:center;
+   background:rgba(red, 0.9);
+   color:$white;
+   font-size:1.5em;
+   height:4em;
+   padding:1em 0;
+   margin:0;
+   position:fixed;
+   bottom:0;
+   left:0;
+   width:100%;
+   z-index:999999999;
+   a {color:$white; font-weight:bold;text-decoration:underline;}
 }
+
 .old-ie-nojs {
   display:none;
 }
 
-/* i.e. profile - Staff page */
+
+/* staff profiles */
+
 .profile {
    display:block;
    margin-top:2em;
