--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -1,14 +1,18 @@
-/* =Navigation
------------------------------------------------ */
+/* -----------------------------------------------------------------------------
+ *                               Navigation
+ * ---------------------------------------------------------------------------*/
 
+ 
 #content .site-navigation {
 	margin: 0 0 1.5em;
 	overflow: hidden;
 }
+
 #content .nav-previous {
 	float: left;
 	width: 50%;
 }
+
 #content .nav-next {
 	float: right;
 	text-align: right;
