Knowledge base adds and changes, ie<8 fixes

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -59,7 +59,7 @@ $font-menu-lineheight		: 1.5;
 $font-menu-size				: 1.4em;
 $font-menu-weight				: 100;
 
-$font-widget-color			: $light-grey;
+$font-widget-color			: $black;
 $font-widget-family			: $font-default-family;
 $font-widget-lineheight		: 1.5;
 $font-widget-size				: 1.2em;
